--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "autoprefixer": "^10.4.8",
     "axios": "^0.27.2",
     "humps": "^2.0.1",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
+    "postcss": "^8.4.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "tailwindcss": "^3.1.8",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
