--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.10.0",
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.2",
+    "@mui/x-date-pickers": "^5.0.9",
     "@stripe/react-stripe-js": "^1.10.0",
     "@stripe/stripe-js": "^1.35.0",
     "@testing-library/jest-dom": "^5.14.1",
@@ -24,6 +25,7 @@
     "autoprefixer": "^10.4.8",
     "axios": "^0.27.2",
     "camelize": "^1.0.0",
+    "dayjs": "^1.11.6",
     "decamelize-keys": "^1.1.0",
     "humps": "^2.0.1",
     "jwt-decode": "^3.1.2",
